@@ -99,17 +99,20 @@ class ZORBA_DLL_PUBLIC StaticContext : public SmartObject
    *         could be found for the given prefix and an DiagnosticHandler has been
    *         registered.
    * @throw ZorbaException if an error occured (e.g. no URI could be found for the given prefix).
+   *
+   * @deprecated This function is deprecated. Use getNamespaceBindings instead.
    */
   virtual String
   getNamespaceURIByPrefix( const String& aPrefix ) const = 0;
 
   /**
-   * \brief Get the list of prefixes declared in this static context.
+   * \brief Get the list of all namespace bindings (prefix, uri)
+   *   declared in this and its parent static contexts.
    *
-   * @param aPrefixes the list of prefixes is added to this vector
+   * @param aBindings the bindings are added to this list
    */
   virtual void
-  getDeclaredPrefixes( std::vector<String>& aPrefixes ) const = 0;
+  getNamespaceBindings( NsBindings& aBindings ) const = 0;
 
   /** \brief Set the default element and type namespace
    *         (see http://www.w3.org/TR/xquery/#static_context)
