@@ -21,7 +21,8 @@ version 2.2
     support.
   * zerr is not predeclared anymore to be http://www.zorba-xquery.com/errors
   * Added API method Item::getNamespaceBindings().
-  * Added API method StaticContext::getDeclaredPrefixes() (see bug #905035)
+  * Added API method StaticContext::getNamespaceBindings() (see bug #905035)
+  * Deprecated StaticContext:getNamespaceURIByPrefix()
 
 version 2.1
 
